Prevent add new tag button from getting too tall

--- a/src/components/NewResource/FormElement.scss
+++ b/src/components/NewResource/FormElement.scss
@@ -50,7 +50,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 570px) {
   #tags_input{
     button{
       padding-left: 8px;
